@@ -3,6 +3,8 @@ Changes in Version 0.6-15 (under development)
 
  o panel.xyarea() gains a 'horizontal' argument.
 
+ o layer() now works with splom.
+
 Changes in Version 0.6-14
 
  o new combineLimits() function for per-row and per-column limits.
